# base_api

./: .pre-commit-config.yaml  Dockerfile  MANIFEST.in  README.md  docker-compose.yml  mypy.ini  pyproject.toml  requirements-dev.txt  requirements.in  requirements.txt  setup.py
config/: gunicorn.conf.py
src/: __init__.py  fastapi_app.py
src/common/: json_logger.py
src/controllers/: __init__.py  custom_controller.py  healthcheck.py
src/models/: custom_model.py
tests/contollers/: test_controller.py
